--- a/helloclient-dev.yml
+++ b/helloclient-dev.yml
@@ -11,5 +11,5 @@ spring:
   datasource:
     jdbc-url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&serverTimezone=GMT%2B8&characterEncoding=utf-8
     driverClassName: com.mysql.jdbc.Driver
-    username: root
+    username: springCloud
     password: cclss
