--- a/eurekaserver-dev.yml
+++ b/eurekaserver-dev.yml
@@ -1,22 +1,22 @@
-spring:
-  application:
-    name: eurekaserver
-  
-eureka:
-  instance:
-    hostname: dev
-    instance-id: dev
-  client:
-    ### 检索服务
-    fetch-registry: false
-    ### 是否将自己注册到eureka
-    register-with-eureka: false
-    service-url:
-      ### 默认注册地址
-      defaultZone: http://localhost:10000/eureka
-  server:
-    ### 当eureka启动时，不能从集群节点中获取到instance注册信息，应该等多久
-    wait-time-in-ms-when-sync-empty: 0
-    enable-self-preservation: true
-    ### eureka多长时间更新一次数据
-    peer-eureka-nodes-update-interval-ms: 10000
+#spring:
+#  application:
+#    name: eurekaserver
+#  
+#eureka:
+#  instance:
+#    hostname: dev
+#    instance-id: dev
+#  client:
+#    ### 检索服务
+#    fetch-registry: false
+#    ### 是否将自己注册到eureka
+#    register-with-eureka: false
+#    service-url:
+#      ### 默认注册地址
+#      defaultZone: http://localhost:10000/eureka
+#  server:
+#    ### 当eureka启动时，不能从集群节点中获取到instance注册信息，应该等多久
+#    wait-time-in-ms-when-sync-empty: 0
+#    enable-self-preservation: true
+#    ### eureka多长时间更新一次数据
+#    peer-eureka-nodes-update-interval-ms: 10000
